--- a/menswear/HTML files/footwear.html
+++ b/menswear/HTML files/footwear.html
@@ -1,155 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Footwear | BagItUp</title>
-    <link rel="stylesheet" href="./CSS Files/footwear.css">
+    <link rel="stylesheet" href="./CSS Files/footwear.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
-                        alt="Logo" /></a></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Search footwear...">
-                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
-            </div>
-            <div class="nav-icons">
-                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="../../login.html" class="sign-in-btn">Sign In</a>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="../../home.html"
+            ><img
+              src="../../images/newlogo-removebg-preview (2).png"
+              alt="Logo"
+          /></a>
+        </div>
+        <div class="search-bar">
+          <input type="text" id="search" placeholder="Search footwear..." />
+          <button>
+            <img
+              src="../../images/searchicon.png"
+              alt="Search"
+              class="search-icon" />
+          </button>
+        </div>
+        <div class="nav-icons">
+          <a href="../../addtocart.html"
+            ><span
+              ><img
+                src="../../images/addtocart.png"
+                class="cart-icon"
+                alt="Cart" /></span
+          ></a>
+          <a href="../../login.html" class="sign-in-btn">Sign In</a>
+        </div>
+      </nav>
     </div>
 
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Footwear</h1>
-            <p class="page-subtitle">Step up your style with our premium footwear collection.</p>
-        </div>
+      <div class="page-header">
+        <h1 class="page-title">Footwear</h1>
+        <p class="page-subtitle">
+          Step up your style with our premium footwear collection.
+        </p>
+      </div>
 
-        <div class="products-container">
-            <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/classicsneaker.png" alt="Sneakers">
-                    </div>
-                    <h3 class="product-name">Classic Sneakers</h3>
-                    <div class="product-price">₹2,499</div>
-                    <p class="product-description">Comfortable sneakers for everyday wear. Perfect blend of style and
-                        comfort.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/formal.png" alt="Formal Shoes">
-                    </div>
-                    <h3 class="product-name">Formal Shoes</h3>
-                    <div class="product-price">₹2,999</div>
-                    <p class="product-description">Elegant formal shoes for business meetings. Professional and
-                        polished.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/loafers.png" alt="Loafers">
-                    </div>
-                    <h3 class="product-name">Loafers</h3>
-                    <div class="product-price">₹2,299</div>
-                    <p class="product-description">Slip-on loafers for casual elegance. Versatile and comfortable.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/leatherboots.png" alt="Boots">
-                    </div>
-                    <h3 class="product-name">Leather Boots</h3>
-                    <div class="product-price">₹3,499</div>
-                    <p class="product-description">Rugged leather boots for all seasons. Durable and stylish.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/runningshoes.png" alt="Running Shoes">
-                    </div>
-                    <h3 class="product-name">Running Shoes</h3>
-                    <div class="product-price">₹2,799</div>
-                    <p class="product-description">Performance running shoes with cushioned sole. Built for athletes.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/sandals.png" alt="Sandals">
-                    </div>
-                    <h3 class="product-name">Casual Sandals</h3>
-                    <div class="product-price">₹1,299</div>
-                    <p class="product-description">Comfortable sandals for relaxed days. Lightweight and breathable.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
+      <div class="products-container">
+        <div class="products-grid">
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/classicsneaker.png" alt="Sneakers" />
             </div>
+            <h3 class="product-name">Classic Sneakers</h3>
+            <div class="product-price">₹2,499</div>
+            <p class="product-description">
+              Comfortable sneakers for everyday wear. Perfect blend of style and
+              comfort.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/formal.png" alt="Formal Shoes" />
+            </div>
+            <h3 class="product-name">Formal Shoes</h3>
+            <div class="product-price">₹2,999</div>
+            <p class="product-description">
+              Elegant formal shoes for business meetings. Professional and
+              polished.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/loafers.png" alt="Loafers" />
+            </div>
+            <h3 class="product-name">Loafers</h3>
+            <div class="product-price">₹2,299</div>
+            <p class="product-description">
+              Slip-on loafers for casual elegance. Versatile and comfortable.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/leatherboots.png" alt="Boots" />
+            </div>
+            <h3 class="product-name">Leather Boots</h3>
+            <div class="product-price">₹3,499</div>
+            <p class="product-description">
+              Rugged leather boots for all seasons. Durable and stylish.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/runningshoes.png" alt="Running Shoes" />
+            </div>
+            <h3 class="product-name">Running Shoes</h3>
+            <div class="product-price">₹2,799</div>
+            <p class="product-description">
+              Performance running shoes with cushioned sole. Built for athletes.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/sandals.png" alt="Sandals" />
+            </div>
+            <h3 class="product-name">Casual Sandals</h3>
+            <div class="product-price">₹1,299</div>
+            <p class="product-description">
+              Comfortable sandals for relaxed days. Lightweight and breathable.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <a href="../../home.html" class="back-home">← Back to Home</a>
     <script src="../JS files/quantity.js"></script>
     <script src="../JS files/cartbutton.js"></script>
-</body>
-
+  </body>
 </html>
