--- a/menswear/HTML files/jackets.html
+++ b/menswear/HTML files/jackets.html
@@ -1,160 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Men's Jackets | BagItUp</title>
-    <link rel="stylesheet" href="./CSS Files/jackets.css">
+    <link rel="stylesheet" href="./CSS Files/jackets.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
-                        alt="Logo" /></a></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Search jackets...">
-                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
-            </div>
-            <div class="nav-icons">
-                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="../../login.html" class="sign-in-btn">Sign In</a>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="../../home.html"
+            ><img
+              src="../../images/newlogo-removebg-preview (2).png"
+              alt="Logo"
+          /></a>
+        </div>
+        <div class="search-bar">
+          <input type="text" id="search" placeholder="Search jackets..." />
+          <button>
+            <img
+              src="../../images/searchicon.png"
+              alt="Search"
+              class="search-icon" />
+          </button>
+        </div>
+        <div class="nav-icons">
+          <a href="../../addtocart.html"
+            ><span
+              ><img
+                src="../../images/addtocart.png"
+                class="cart-icon"
+                alt="Cart" /></span
+          ></a>
+          <a href="../../login.html" class="sign-in-btn">Sign In</a>
+        </div>
+      </nav>
     </div>
 
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Men's Jackets</h1>
-            <p class="page-subtitle">Explore our premium collection of men's jackets, designed for style and comfort in
-                every season.</p>
-        </div>
+      <div class="page-header">
+        <h1 class="page-title">Men's Jackets</h1>
+        <p class="page-subtitle">
+          Explore our premium collection of men's jackets, designed for style
+          and comfort in every season.
+        </p>
+      </div>
 
-        <div class="products-container">
-            <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/denim.webp" alt="Denim Jacket">
-                    </div>
-                    <h3 class="product-name">Denim Jacket</h3>
-                    <div class="product-price">₹2,499</div>
-                    <p class="product-description">Classic denim jacket with timeless style. Perfect for casual outings
-                        and layering.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/bomber.png" alt="Bomber Jacket">
-                    </div>
-                    <h3 class="product-name">Bomber Jacket</h3>
-                    <div class="product-price">₹2,999</div>
-                    <p class="product-description">Stylish bomber jacket with modern fit. Ideal for casual and
-                        semi-formal occasions.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/leather.png" alt="Leather Jacket">
-                    </div>
-                    <h3 class="product-name">Leather Jacket</h3>
-                    <div class="product-price">₹4,999</div>
-                    <p class="product-description">Premium leather jacket with sleek design. A wardrobe essential for
-                        the modern man.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/rename.png" alt="Windbreaker">
-                    </div>
-                    <h3 class="product-name">Windbreaker</h3>
-                    <div class="product-price">₹1,999</div>
-                    <p class="product-description">Lightweight windbreaker for active lifestyles. Water-resistant and
-                        breathable.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/parka.png" alt="Parka Jacket">
-                    </div>
-                    <h3 class="product-name">Parka Jacket</h3>
-                    <div class="product-price">₹3,499</div>
-                    <p class="product-description">Warm parka jacket for cold weather. Features insulated lining and
-                        hood.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/blazer.png" alt="Blazer">
-                    </div>
-                    <h3 class="product-name">Blazer</h3>
-                    <div class="product-price">₹3,999</div>
-                    <p class="product-description">Smart casual blazer for formal occasions. Tailored fit with premium
-                        fabric.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
+      <div class="products-container">
+        <div class="products-grid">
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/denim.webp" alt="Denim Jacket" />
             </div>
+            <h3 class="product-name">Denim Jacket</h3>
+            <div class="product-price">₹2,499</div>
+            <p class="product-description">
+              Classic denim jacket with timeless style. Perfect for casual
+              outings and layering.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/bomber.png" alt="Bomber Jacket" />
+            </div>
+            <h3 class="product-name">Bomber Jacket</h3>
+            <div class="product-price">₹2,999</div>
+            <p class="product-description">
+              Stylish bomber jacket with modern fit. Ideal for casual and
+              semi-formal occasions.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/leather.png" alt="Leather Jacket" />
+            </div>
+            <h3 class="product-name">Leather Jacket</h3>
+            <div class="product-price">₹4,999</div>
+            <p class="product-description">
+              Premium leather jacket with sleek design. A wardrobe essential for
+              the modern man.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/rename.png" alt="Windbreaker" />
+            </div>
+            <h3 class="product-name">Windbreaker</h3>
+            <div class="product-price">₹1,999</div>
+            <p class="product-description">
+              Lightweight windbreaker for active lifestyles. Water-resistant and
+              breathable.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/parka.png" alt="Parka Jacket" />
+            </div>
+            <h3 class="product-name">Parka Jacket</h3>
+            <div class="product-price">₹3,499</div>
+            <p class="product-description">
+              Warm parka jacket for cold weather. Features insulated lining and
+              hood.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/blazer.png" alt="Blazer" />
+            </div>
+            <h3 class="product-name">Blazer</h3>
+            <div class="product-price">₹3,999</div>
+            <p class="product-description">
+              Smart casual blazer for formal occasions. Tailored fit with
+              premium fabric.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <a href="../../home.html" class="back-home">← Back to Home</a>
     <script src="../JS files/quantity.js"></script>
     <script src="../JS files/cartbutton.js"></script>
-</body>
-
+  </body>
 </html>
