--- a/menswear/HTML files/mens-jeans.html
+++ b/menswear/HTML files/mens-jeans.html
@@ -1,158 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Men's Jeans | BagItUp</title>
-    <link rel="stylesheet" href="./CSS Files/mens-jeans.css">
+    <link rel="stylesheet" href="./CSS Files/mens-jeans.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
-                        alt="Logo" /></a></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Search jeans...">
-                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
-            </div>
-            <div class="nav-icons">
-                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="../../login.html" class="sign-in-btn">Sign In</a>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="../../home.html"
+            ><img
+              src="../../images/newlogo-removebg-preview (2).png"
+              alt="Logo"
+          /></a>
+        </div>
+        <div class="search-bar">
+          <input type="text" id="search" placeholder="Search jeans..." />
+          <button>
+            <img
+              src="../../images/searchicon.png"
+              alt="Search"
+              class="search-icon" />
+          </button>
+        </div>
+        <div class="nav-icons">
+          <a href="../../addtocart.html"
+            ><span
+              ><img
+                src="../../images/addtocart.png"
+                class="cart-icon"
+                alt="Cart" /></span
+          ></a>
+          <a href="../../login.html" class="sign-in-btn">Sign In</a>
+        </div>
+      </nav>
     </div>
 
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Men's Jeans</h1>
-            <p class="page-subtitle">Discover our range of premium denim jeans, crafted for comfort and durability.</p>
-        </div>
+      <div class="page-header">
+        <h1 class="page-title">Men's Jeans</h1>
+        <p class="page-subtitle">
+          Discover our range of premium denim jeans, crafted for comfort and
+          durability.
+        </p>
+      </div>
 
-        <div class="products-container">
-            <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/slimfit.png" alt="Slim Fit Jeans">
-                    </div>
-                    <h3 class="product-name">Slim Fit Jeans</h3>
-                    <div class="product-price">₹1,799</div>
-                    <p class="product-description">Modern slim fit jeans with stretch denim. Perfect for a contemporary
-                        look.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/regular fit.png" alt="Regular Fit Jeans">
-                    </div>
-                    <h3 class="product-name">Regular Fit Jeans</h3>
-                    <div class="product-price">₹1,599</div>
-                    <p class="product-description">Classic regular fit jeans for everyday comfort. Timeless style meets
-                        functionality.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/skinny.png" alt="Skinny Jeans">
-                    </div>
-                    <h3 class="product-name">Skinny Jeans</h3>
-                    <div class="product-price">₹1,899</div>
-                    <p class="product-description">Trendy skinny fit jeans with premium stretch fabric. Modern style for
-                        the fashion-forward.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/relaxed.png" alt="Relaxed Fit Jeans">
-                    </div>
-                    <h3 class="product-name">Relaxed Fit Jeans</h3>
-                    <div class="product-price">₹1,699</div>
-                    <p class="product-description">Comfortable relaxed fit jeans. Perfect for casual weekends and
-                        laid-back style.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/bootcut.png" alt="Bootcut Jeans">
-                    </div>
-                    <h3 class="product-name">Bootcut Jeans</h3>
-                    <div class="product-price">₹1,799</div>
-                    <p class="product-description">Classic bootcut style jeans. Versatile design for any occasion.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/distressed.png" alt="Distressed Jeans">
-                    </div>
-                    <h3 class="product-name">Distressed Jeans</h3>
-                    <div class="product-price">₹2,099</div>
-                    <p class="product-description">Edgy distressed jeans with rugged appeal. Make a bold fashion
-                        statement.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
+      <div class="products-container">
+        <div class="products-grid">
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/slimfit.png" alt="Slim Fit Jeans" />
             </div>
+            <h3 class="product-name">Slim Fit Jeans</h3>
+            <div class="product-price">₹1,799</div>
+            <p class="product-description">
+              Modern slim fit jeans with stretch denim. Perfect for a
+              contemporary look.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/regular fit.png" alt="Regular Fit Jeans" />
+            </div>
+            <h3 class="product-name">Regular Fit Jeans</h3>
+            <div class="product-price">₹1,599</div>
+            <p class="product-description">
+              Classic regular fit jeans for everyday comfort. Timeless style
+              meets functionality.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/skinny.png" alt="Skinny Jeans" />
+            </div>
+            <h3 class="product-name">Skinny Jeans</h3>
+            <div class="product-price">₹1,899</div>
+            <p class="product-description">
+              Trendy skinny fit jeans with premium stretch fabric. Modern style
+              for the fashion-forward.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/relaxed.png" alt="Relaxed Fit Jeans" />
+            </div>
+            <h3 class="product-name">Relaxed Fit Jeans</h3>
+            <div class="product-price">₹1,699</div>
+            <p class="product-description">
+              Comfortable relaxed fit jeans. Perfect for casual weekends and
+              laid-back style.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/bootcut.png" alt="Bootcut Jeans" />
+            </div>
+            <h3 class="product-name">Bootcut Jeans</h3>
+            <div class="product-price">₹1,799</div>
+            <p class="product-description">
+              Classic bootcut style jeans. Versatile design for any occasion.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/distressed.png" alt="Distressed Jeans" />
+            </div>
+            <h3 class="product-name">Distressed Jeans</h3>
+            <div class="product-price">₹2,099</div>
+            <p class="product-description">
+              Edgy distressed jeans with rugged appeal. Make a bold fashion
+              statement.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <a href="../../home.html" class="back-home">← Back to Home</a>
-     <script src="../JS files/quantity.js"></script>
+    <script src="../JS files/quantity.js"></script>
     <script src="../JS files/cartbutton.js"></script>
-</body>
-
+  </body>
 </html>
