--- a/menswear/HTML files/mens-tshirts.html
+++ b/menswear/HTML files/mens-tshirts.html
@@ -1,160 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Men's T-Shirts | BagItUp</title>
-    <link rel="stylesheet" href="./CSS Files/mens-tshirts.css">
+    <link rel="stylesheet" href="./CSS Files/mens-tshirts.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
-                        alt="Logo" /></a></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Search eco-friendly t-shirts...">
-                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
-            </div>
-            <div class="nav-icons">
-                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="../../login.html" class="sign-in-btn">Sign In</a>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="../../home.html"
+            ><img
+              src="../../images/newlogo-removebg-preview (2).png"
+              alt="Logo"
+          /></a>
+        </div>
+        <div class="search-bar">
+          <input
+            type="text"
+            id="search"
+            placeholder="Search eco-friendly t-shirts..." />
+          <button>
+            <img
+              src="../../images/searchicon.png"
+              alt="Search"
+              class="search-icon" />
+          </button>
+        </div>
+        <div class="nav-icons">
+          <a href="../../addtocart.html"
+            ><span
+              ><img
+                src="../../images/addtocart.png"
+                class="cart-icon"
+                alt="Cart" /></span
+          ></a>
+          <a href="../../login.html" class="sign-in-btn">Sign In</a>
+        </div>
+      </nav>
     </div>
 
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Men's T-Shirts</h1>
-            <p class="page-subtitle">Discover our collection of sustainable and comfortable men's t-shirts, crafted with
-                eco-friendly materials for the modern conscious consumer.</p>
-        </div>
+      <div class="page-header">
+        <h1 class="page-title">Men's T-Shirts</h1>
+        <p class="page-subtitle">
+          Discover our collection of sustainable and comfortable men's t-shirts,
+          crafted with eco-friendly materials for the modern conscious consumer.
+        </p>
+      </div>
 
-        <div class="products-container">
-            <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/crew neck.png" alt="Classic Cotton Crew Neck T-Shirt">
-                    </div>
-                    <h3 class="product-name">Crew Neck</h3>
-                    <div class="product-price">₹899</div>
-                    <p class="product-description">Classic crew neck t-shirt made from premium organic cotton. Perfect
-                        for everyday comfort and style.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/vneck.png" alt="Modern V-Neck T-Shirt">
-                    </div>
-                    <h3 class="product-name">V-Neck</h3>
-                    <div class="product-price">₹999</div>
-                    <p class="product-description">Sleek v-neck design crafted from soft, sustainable cotton blend.
-                        Perfect for a modern, casual look.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image product-image-polo">
-                        <img src="../../images/polo.png" alt="Classic Polo T-Shirt">
-                    </div>
-                    <h3 class="product-name">Polo</h3>
-                    <div class="product-price">₹1,299</div>
-                    <p class="product-description">Premium polo shirt with classic collar design. Made from breathable,
-                        eco-friendly materials.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image product-image-tshirt4">
-                        <img src="../../images/henley.png" alt="Comfort Henley T-Shirt">
-                    </div>
-                    <h3 class="product-name">Henley</h3>
-                    <div class="product-price">₹1,199</div>
-                    <p class="product-description">Stylish henley with button placket detail. Made from soft,
-                        sustainable fabric for all-day comfort.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/reglan.png" alt="Sport Raglan T-Shirt">
-                    </div>
-                    <h3 class="product-name">Raglan</h3>
-                    <div class="product-price">₹1,099</div>
-                    <p class="product-description">Athletic raglan sleeve design. Perfect for sports and casual wear
-                        with enhanced mobility.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
-
-                <div class="product-card">
-                    <div class="product-image">
-                        <img src="../../images/oversized.png" alt="Street Oversized T-Shirt">
-                    </div>
-                    <h3 class="product-name">Oversized</h3>
-                    <div class="product-price">₹1,399</div>
-                    <p class="product-description">Contemporary oversized fit with dropped shoulders. Perfect for a
-                        modern streetwear look.</p>
-                    <div class="quantity-control">
-                        <button class="quantity-decrease">−</button>
-                        <span class="quantity-display">1</span>
-                        <button class="quantity-increase">+</button>
-                    </div>
-                    <button class="add-to-cart-btn">
-                        <span class="button-text">Add to Cart</span>
-                        <span class="tick-mark">✓</span>
-                    </button>
-                </div>
+      <div class="products-container">
+        <div class="products-grid">
+          <div class="product-card">
+            <div class="product-image">
+              <img
+                src="../../images/crew neck.png"
+                alt="Classic Cotton Crew Neck T-Shirt" />
             </div>
+            <h3 class="product-name">Crew Neck</h3>
+            <div class="product-price">₹899</div>
+            <p class="product-description">
+              Classic crew neck t-shirt made from premium organic cotton.
+              Perfect for everyday comfort and style.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/vneck.png" alt="Modern V-Neck T-Shirt" />
+            </div>
+            <h3 class="product-name">V-Neck</h3>
+            <div class="product-price">₹999</div>
+            <p class="product-description">
+              Sleek v-neck design crafted from soft, sustainable cotton blend.
+              Perfect for a modern, casual look.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image product-image-polo">
+              <img src="../../images/polo.png" alt="Classic Polo T-Shirt" />
+            </div>
+            <h3 class="product-name">Polo</h3>
+            <div class="product-price">₹1,299</div>
+            <p class="product-description">
+              Premium polo shirt with classic collar design. Made from
+              breathable, eco-friendly materials.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image product-image-tshirt4">
+              <img src="../../images/henley.png" alt="Comfort Henley T-Shirt" />
+            </div>
+            <h3 class="product-name">Henley</h3>
+            <div class="product-price">₹1,199</div>
+            <p class="product-description">
+              Stylish henley with button placket detail. Made from soft,
+              sustainable fabric for all-day comfort.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img src="../../images/reglan.png" alt="Sport Raglan T-Shirt" />
+            </div>
+            <h3 class="product-name">Raglan</h3>
+            <div class="product-price">₹1,099</div>
+            <p class="product-description">
+              Athletic raglan sleeve design. Perfect for sports and casual wear
+              with enhanced mobility.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
+
+          <div class="product-card">
+            <div class="product-image">
+              <img
+                src="../../images/oversized.png"
+                alt="Street Oversized T-Shirt" />
+            </div>
+            <h3 class="product-name">Oversized</h3>
+            <div class="product-price">₹1,399</div>
+            <p class="product-description">
+              Contemporary oversized fit with dropped shoulders. Perfect for a
+              modern streetwear look.
+            </p>
+            <div class="quantity-control">
+              <button class="quantity-decrease">−</button>
+              <span class="quantity-display">1</span>
+              <button class="quantity-increase">+</button>
+            </div>
+            <button class="add-to-cart-btn">
+              <span class="button-text">Add to Cart</span>
+              <span class="tick-mark">✓</span>
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <a href="../../home.html" class="back-home">← Back to Home</a>
     <script src="../JS files/quantity.js"></script>
     <script src="../JS files/cartbutton.js"></script>
-</body>
-
+  </body>
 </html>
