--- a/contact-us.html
+++ b/contact-us.html
@@ -1,239 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us | BagItUp</title>
-    <link rel="stylesheet" href="login-new.css">
+    <link rel="stylesheet" href="login-new.css" />
     <style>
-        .contact-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 40px 20px;
+      .contact-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        padding: 40px 20px;
+      }
+
+      .contact-box {
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(20px);
+        border-radius: 30px;
+        padding: 50px 40px;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+        max-width: 800px;
+        width: 100%;
+      }
+
+      .contact-header {
+        text-align: center;
+        margin-bottom: 40px;
+      }
+
+      .contact-header h1 {
+        font-size: 36px;
+        font-weight: 700;
+        color: #1a1a1a;
+        margin-bottom: 10px;
+      }
+
+      .contact-header p {
+        color: #666666;
+        font-size: 16px;
+      }
+
+      .contact-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 40px;
+        margin-bottom: 40px;
+      }
+
+      .contact-info {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+      }
+
+      .info-item {
+        display: flex;
+        gap: 15px;
+        align-items: flex-start;
+      }
+
+      .info-icon {
+        width: 40px;
+        height: 40px;
+        background: #1a1a1a;
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #ffffff;
+        font-size: 18px;
+        flex-shrink: 0;
+      }
+
+      .info-details h3 {
+        font-size: 16px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-bottom: 5px;
+      }
+
+      .info-details p {
+        font-size: 14px;
+        color: #666666;
+        line-height: 1.6;
+      }
+
+      .contact-form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      .form-group label {
+        font-size: 14px;
+        font-weight: 600;
+        color: #1a1a1a;
+      }
+
+      .form-group input,
+      .form-group textarea {
+        width: 100%;
+        padding: 14px 18px;
+        border: 2px solid #e0e0e0;
+        border-radius: 12px;
+        font-size: 15px;
+        background: #ffffff;
+        color: #1a1a1a;
+        transition: all 0.3s ease;
+        font-family: inherit;
+      }
+
+      .form-group textarea {
+        resize: vertical;
+        min-height: 120px;
+      }
+
+      .form-group input:focus,
+      .form-group textarea:focus {
+        outline: none;
+        border-color: #1a1a1a;
+        box-shadow: 0 0 0 3px rgba(26, 26, 26, 0.1);
+      }
+
+      .submit-btn {
+        width: 100%;
+        padding: 16px;
+        background: #1a1a1a;
+        color: #ffffff;
+        border: none;
+        border-radius: 30px;
+        font-size: 15px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        letter-spacing: 0.5px;
+      }
+
+      .submit-btn:hover {
+        background: #000000;
+        transform: translateY(-2px);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      }
+
+      @media (max-width: 768px) {
+        .contact-content {
+          grid-template-columns: 1fr;
+          gap: 30px;
         }
 
         .contact-box {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
-            border-radius: 30px;
-            padding: 50px 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
-            max-width: 800px;
-            width: 100%;
-        }
-
-        .contact-header {
-            text-align: center;
-            margin-bottom: 40px;
+          padding: 40px 30px;
         }
 
         .contact-header h1 {
-            font-size: 36px;
-            font-weight: 700;
-            color: #1a1a1a;
-            margin-bottom: 10px;
+          font-size: 30px;
         }
 
         .contact-header p {
-            color: #666666;
-            font-size: 16px;
+          font-size: 15px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .contact-container {
+          padding: 20px 10px;
+        }
+
+        .contact-box {
+          padding: 30px 20px;
+          border-radius: 20px;
+        }
+
+        .contact-header {
+          margin-bottom: 30px;
+        }
+
+        .contact-header h1 {
+          font-size: 26px;
+        }
+
+        .contact-header p {
+          font-size: 14px;
         }
 
         .contact-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 40px;
-            margin-bottom: 40px;
+          gap: 25px;
+          margin-bottom: 30px;
         }
 
-        .contact-info {
-            display: flex;
-            flex-direction: column;
-            gap: 25px;
+        .info-item h3 {
+          font-size: 16px;
         }
 
-        .info-item {
-            display: flex;
-            gap: 15px;
-            align-items: flex-start;
+        .info-item p {
+          font-size: 13px;
         }
 
-        .info-icon {
-            width: 40px;
-            height: 40px;
-            background: #1a1a1a;
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #ffffff;
-            font-size: 18px;
-            flex-shrink: 0;
+        .input-group label {
+          font-size: 13px;
         }
 
-        .info-details h3 {
-            font-size: 16px;
-            font-weight: 600;
-            color: #1a1a1a;
-            margin-bottom: 5px;
-        }
-
-        .info-details p {
-            font-size: 14px;
-            color: #666666;
-            line-height: 1.6;
-        }
-
-        .contact-form {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .form-group label {
-            font-size: 14px;
-            font-weight: 600;
-            color: #1a1a1a;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 14px 18px;
-            border: 2px solid #e0e0e0;
-            border-radius: 12px;
-            font-size: 15px;
-            background: #ffffff;
-            color: #1a1a1a;
-            transition: all 0.3s ease;
-            font-family: inherit;
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            min-height: 120px;
-        }
-
-        .form-group input:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: #1a1a1a;
-            box-shadow: 0 0 0 3px rgba(26, 26, 26, 0.1);
+        .input-group input,
+        .input-group textarea {
+          font-size: 14px;
+          padding: 12px 15px;
         }
 
         .submit-btn {
-            width: 100%;
-            padding: 16px;
-            background: #1a1a1a;
-            color: #ffffff;
-            border: none;
-            border-radius: 30px;
-            font-size: 15px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            letter-spacing: 0.5px;
+          padding: 14px;
+          font-size: 14px;
         }
-
-        .submit-btn:hover {
-            background: #000000;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        @media (max-width: 768px) {
-            .contact-content {
-                grid-template-columns: 1fr;
-            }
-
-            .contact-box {
-                padding: 40px 30px;
-            }
-        }
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="contact-container">
-        <div class="contact-box">
-            <div class="contact-header">
-                <h1>Contact Us</h1>
-                <p>We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
-            </div>
-
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="info-item">
-                        <div class="info-icon">📧</div>
-                        <div class="info-details">
-                            <h3>Email</h3>
-                            <p>support@bagitup.com<br>sales@bagitup.com</p>
-                        </div>
-                    </div>
-
-                    <div class="info-item">
-                        <div class="info-icon">📞</div>
-                        <div class="info-details">
-                            <h3>Phone</h3>
-                            <p>+1 (555) 123-4567<br>Mon-Fri, 9am-6pm EST</p>
-                        </div>
-                    </div>
-
-                    <div class="info-item">
-                        <div class="info-icon">📍</div>
-                        <div class="info-details">
-                            <h3>Address</h3>
-                            <p>123 Fashion Avenue<br>New York, NY 10001<br>United States</p>
-                        </div>
-                    </div>
-
-                    <div class="info-item">
-                        <div class="info-icon">⏰</div>
-                        <div class="info-details">
-                            <h3>Business Hours</h3>
-                            <p>Monday - Friday: 9am - 6pm<br>Saturday: 10am - 4pm<br>Sunday: Closed</p>
-                        </div>
-                    </div>
-                </div>
-
-                <form class="contact-form" onsubmit="alert('Your message has been sent!'); return false;">
-                    <div class="form-group">
-                        <label>Your Name</label>
-                        <input type="text" placeholder="John Doe" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="email" placeholder="john@example.com" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Subject</label>
-                        <input type="text" placeholder="How can we help?" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Message</label>
-                        <textarea placeholder="Write your message here..." required></textarea>
-                    </div>
-
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-            </div>
+      <div class="contact-box">
+        <div class="contact-header">
+          <h1>Contact Us</h1>
+          <p>
+            We'd love to hear from you. Send us a message and we'll respond as
+            soon as possible.
+          </p>
         </div>
 
-        <a href="home.html" class="back-to-home-btn">← Back to Home</a>
-    </div>
-</body>
+        <div class="contact-content">
+          <div class="contact-info">
+            <div class="info-item">
+              <div class="info-icon">📧</div>
+              <div class="info-details">
+                <h3>Email</h3>
+                <p>support@bagitup.com<br />sales@bagitup.com</p>
+              </div>
+            </div>
 
+            <div class="info-item">
+              <div class="info-icon">📞</div>
+              <div class="info-details">
+                <h3>Phone</h3>
+                <p>+1 (555) 123-4567<br />Mon-Fri, 9am-6pm EST</p>
+              </div>
+            </div>
+
+            <div class="info-item">
+              <div class="info-icon">📍</div>
+              <div class="info-details">
+                <h3>Address</h3>
+                <p>
+                  123 Fashion Avenue<br />New York, NY 10001<br />United States
+                </p>
+              </div>
+            </div>
+
+            <div class="info-item">
+              <div class="info-icon">⏰</div>
+              <div class="info-details">
+                <h3>Business Hours</h3>
+                <p>
+                  Monday - Friday: 9am - 6pm<br />Saturday: 10am - 4pm<br />Sunday:
+                  Closed
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <form
+            class="contact-form"
+            onsubmit="alert('Your message has been sent!'); return false;">
+            <div class="form-group">
+              <label>Your Name</label>
+              <input type="text" placeholder="John Doe" required />
+            </div>
+
+            <div class="form-group">
+              <label>Email Address</label>
+              <input type="email" placeholder="john@example.com" required />
+            </div>
+
+            <div class="form-group">
+              <label>Subject</label>
+              <input type="text" placeholder="How can we help?" required />
+            </div>
+
+            <div class="form-group">
+              <label>Message</label>
+              <textarea
+                placeholder="Write your message here..."
+                required></textarea>
+            </div>
+
+            <button type="submit" class="submit-btn">Send Message</button>
+          </form>
+        </div>
+      </div>
+
+      <a href="home.html" class="back-to-home-btn">← Back to Home</a>
+    </div>
+  </body>
 </html>
