--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,222 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy | BagItUp</title>
-    <link rel="stylesheet" href="login-new.css">
+    <link rel="stylesheet" href="login-new.css" />
     <style>
-        .privacy-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 40px 20px;
-        }
+      .privacy-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        padding: 40px 20px;
+      }
 
+      .privacy-box {
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(20px);
+        border-radius: 30px;
+        padding: 50px 40px;
+        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+        max-width: 900px;
+        width: 100%;
+      }
+
+      .privacy-header {
+        text-align: center;
+        margin-bottom: 40px;
+      }
+
+      .privacy-header h1 {
+        font-size: 36px;
+        font-weight: 700;
+        color: #1a1a1a;
+        margin-bottom: 10px;
+      }
+
+      .privacy-header p {
+        color: #666666;
+        font-size: 14px;
+      }
+
+      .privacy-content {
+        color: #1a1a1a;
+        line-height: 1.8;
+      }
+
+      .privacy-content h2 {
+        font-size: 22px;
+        font-weight: 600;
+        color: #1a1a1a;
+        margin-top: 30px;
+        margin-bottom: 15px;
+      }
+
+      .privacy-content h2:first-child {
+        margin-top: 0;
+      }
+
+      .privacy-content p {
+        font-size: 15px;
+        color: #4a4a4a;
+        margin-bottom: 15px;
+      }
+
+      .privacy-content ul {
+        margin: 15px 0;
+        padding-left: 30px;
+      }
+
+      .privacy-content li {
+        font-size: 15px;
+        color: #4a4a4a;
+        margin-bottom: 10px;
+      }
+
+      .privacy-content strong {
+        color: #1a1a1a;
+        font-weight: 600;
+      }
+
+      @media (max-width: 768px) {
         .privacy-box {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
-            border-radius: 30px;
-            padding: 50px 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
-            max-width: 900px;
-            width: 100%;
-        }
-
-        .privacy-header {
-            text-align: center;
-            margin-bottom: 40px;
+          padding: 40px 30px;
         }
 
         .privacy-header h1 {
-            font-size: 36px;
-            font-weight: 700;
-            color: #1a1a1a;
-            margin-bottom: 10px;
+          font-size: 28px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .privacy-container {
+          padding: 20px 10px;
+        }
+
+        .privacy-box {
+          padding: 30px 20px;
+          border-radius: 20px;
+        }
+
+        .privacy-header h1 {
+          font-size: 24px;
         }
 
         .privacy-header p {
-            color: #666666;
-            font-size: 14px;
+          font-size: 13px;
         }
 
-        .privacy-content {
-            color: #1a1a1a;
-            line-height: 1.8;
+        .privacy-section h2 {
+          font-size: 18px;
         }
 
-        .privacy-content h2 {
-            font-size: 22px;
-            font-weight: 600;
-            color: #1a1a1a;
-            margin-top: 30px;
-            margin-bottom: 15px;
+        .privacy-section p,
+        .privacy-section ul li {
+          font-size: 14px;
         }
-
-        .privacy-content h2:first-child {
-            margin-top: 0;
-        }
-
-        .privacy-content p {
-            font-size: 15px;
-            color: #4a4a4a;
-            margin-bottom: 15px;
-        }
-
-        .privacy-content ul {
-            margin: 15px 0;
-            padding-left: 30px;
-        }
-
-        .privacy-content li {
-            font-size: 15px;
-            color: #4a4a4a;
-            margin-bottom: 10px;
-        }
-
-        .privacy-content strong {
-            color: #1a1a1a;
-            font-weight: 600;
-        }
-
-        @media (max-width: 768px) {
-            .privacy-box {
-                padding: 40px 30px;
-            }
-
-            .privacy-header h1 {
-                font-size: 28px;
-            }
-        }
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="privacy-container">
-        <div class="privacy-box">
-            <div class="privacy-header">
-                <h1>Privacy Policy</h1>
-                <p>Last Updated: November 15, 2025</p>
-            </div>
-
-            <div class="privacy-content">
-                <p>At BagItUp, we are committed to protecting your privacy and ensuring the security of your personal
-                    information. This Privacy Policy explains how we collect, use, disclose, and safeguard your
-                    information when you visit our website or use our services.</p>
-
-                <h2>1. Information We Collect</h2>
-                <p>We collect various types of information to provide and improve our services:</p>
-
-                <p><strong>Personal Information:</strong></p>
-                <ul>
-                    <li>Name, email address, phone number</li>
-                    <li>Shipping and billing addresses</li>
-                    <li>Payment information (processed securely through third-party payment processors)</li>
-                    <li>Account credentials and preferences</li>
-                </ul>
-
-                <p><strong>Automatically Collected Information:</strong></p>
-                <ul>
-                    <li>IP address, browser type, and device information</li>
-                    <li>Usage data, including pages visited and time spent on our site</li>
-                    <li>Cookies and similar tracking technologies</li>
-                </ul>
-
-                <h2>2. How We Use Your Information</h2>
-                <p>We use the collected information for various purposes:</p>
-                <ul>
-                    <li>To process and fulfill your orders</li>
-                    <li>To communicate with you about your orders, account, and customer service</li>
-                    <li>To send you marketing communications (with your consent)</li>
-                    <li>To improve our website, products, and services</li>
-                    <li>To personalize your shopping experience</li>
-                    <li>To detect and prevent fraud and security threats</li>
-                    <li>To comply with legal obligations</li>
-                </ul>
-
-                <h2>3. Information Sharing and Disclosure</h2>
-                <p>We do not sell your personal information. We may share your information with:</p>
-                <ul>
-                    <li><strong>Service Providers:</strong> Third-party companies that help us operate our business
-                        (e.g., payment processors, shipping companies, email service providers)</li>
-                    <li><strong>Business Transfers:</strong> In connection with a merger, acquisition, or sale of assets
-                    </li>
-                    <li><strong>Legal Requirements:</strong> When required by law or to protect our rights and safety
-                    </li>
-                    <li><strong>With Your Consent:</strong> When you explicitly authorize us to share your information
-                    </li>
-                </ul>
-
-                <h2>4. Cookies and Tracking Technologies</h2>
-                <p>We use cookies and similar technologies to enhance your browsing experience. Cookies help us:</p>
-                <ul>
-                    <li>Remember your preferences and shopping cart items</li>
-                    <li>Understand how you use our website</li>
-                    <li>Provide personalized content and advertisements</li>
-                    <li>Analyze website traffic and performance</li>
-                </ul>
-                <p>You can control cookie preferences through your browser settings, but this may affect website
-                    functionality.</p>
-
-                <h2>5. Data Security</h2>
-                <p>We implement industry-standard security measures to protect your personal information, including:</p>
-                <ul>
-                    <li>Encryption of sensitive data during transmission (SSL/TLS)</li>
-                    <li>Secure storage of payment information through PCI-compliant processors</li>
-                    <li>Regular security assessments and updates</li>
-                    <li>Access controls and authentication procedures</li>
-                </ul>
-                <p>However, no method of transmission over the internet is 100% secure, and we cannot guarantee absolute
-                    security.</p>
-
-                <h2>6. Your Rights and Choices</h2>
-                <p>You have certain rights regarding your personal information:</p>
-                <ul>
-                    <li><strong>Access:</strong> Request access to the personal information we hold about you</li>
-                    <li><strong>Correction:</strong> Request correction of inaccurate or incomplete information</li>
-                    <li><strong>Deletion:</strong> Request deletion of your personal information (subject to legal
-                        obligations)</li>
-                    <li><strong>Opt-Out:</strong> Unsubscribe from marketing emails at any time</li>
-                    <li><strong>Data Portability:</strong> Request a copy of your data in a portable format</li>
-                </ul>
-                <p>To exercise these rights, please contact us at privacy@bagitup.com.</p>
-
-                <h2>7. Children's Privacy</h2>
-                <p>Our services are not directed to individuals under the age of 13. We do not knowingly collect
-                    personal information from children. If we become aware that we have collected information from a
-                    child without parental consent, we will take steps to delete that information.</p>
-
-                <h2>8. Third-Party Links</h2>
-                <p>Our website may contain links to third-party websites. We are not responsible for the privacy
-                    practices of these external sites. We encourage you to review their privacy policies before
-                    providing any personal information.</p>
-
-                <h2>9. International Data Transfers</h2>
-                <p>Your information may be transferred to and processed in countries other than your country of
-                    residence. We ensure that appropriate safeguards are in place to protect your information in
-                    accordance with this Privacy Policy.</p>
-
-                <h2>10. Changes to This Privacy Policy</h2>
-                <p>We may update this Privacy Policy from time to time. We will notify you of any material changes by
-                    posting the new Privacy Policy on this page and updating the "Last Updated" date. We encourage you
-                    to review this Privacy Policy periodically.</p>
-
-                <h2>11. Contact Us</h2>
-                <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices,
-                    please contact us:</p>
-                <p><strong>Email:</strong> privacy@bagitup.com<br>
-                    <strong>Phone:</strong> +1 (555) 123-4567<br>
-                    <strong>Address:</strong> 123 Fashion Avenue, New York, NY 10001<br>
-                    <strong>Data Protection Officer:</strong> dpo@bagitup.com
-                </p>
-            </div>
+      <div class="privacy-box">
+        <div class="privacy-header">
+          <h1>Privacy Policy</h1>
+          <p>Last Updated: November 15, 2025</p>
         </div>
 
-        <a href="home.html" class="back-to-home-btn">← Back to Home</a>
-    </div>
-</body>
+        <div class="privacy-content">
+          <p>
+            At BagItUp, we are committed to protecting your privacy and ensuring
+            the security of your personal information. This Privacy Policy
+            explains how we collect, use, disclose, and safeguard your
+            information when you visit our website or use our services.
+          </p>
 
+          <h2>1. Information We Collect</h2>
+          <p>
+            We collect various types of information to provide and improve our
+            services:
+          </p>
+
+          <p><strong>Personal Information:</strong></p>
+          <ul>
+            <li>Name, email address, phone number</li>
+            <li>Shipping and billing addresses</li>
+            <li>
+              Payment information (processed securely through third-party
+              payment processors)
+            </li>
+            <li>Account credentials and preferences</li>
+          </ul>
+
+          <p><strong>Automatically Collected Information:</strong></p>
+          <ul>
+            <li>IP address, browser type, and device information</li>
+            <li>
+              Usage data, including pages visited and time spent on our site
+            </li>
+            <li>Cookies and similar tracking technologies</li>
+          </ul>
+
+          <h2>2. How We Use Your Information</h2>
+          <p>We use the collected information for various purposes:</p>
+          <ul>
+            <li>To process and fulfill your orders</li>
+            <li>
+              To communicate with you about your orders, account, and customer
+              service
+            </li>
+            <li>To send you marketing communications (with your consent)</li>
+            <li>To improve our website, products, and services</li>
+            <li>To personalize your shopping experience</li>
+            <li>To detect and prevent fraud and security threats</li>
+            <li>To comply with legal obligations</li>
+          </ul>
+
+          <h2>3. Information Sharing and Disclosure</h2>
+          <p>
+            We do not sell your personal information. We may share your
+            information with:
+          </p>
+          <ul>
+            <li>
+              <strong>Service Providers:</strong> Third-party companies that
+              help us operate our business (e.g., payment processors, shipping
+              companies, email service providers)
+            </li>
+            <li>
+              <strong>Business Transfers:</strong> In connection with a merger,
+              acquisition, or sale of assets
+            </li>
+            <li>
+              <strong>Legal Requirements:</strong> When required by law or to
+              protect our rights and safety
+            </li>
+            <li>
+              <strong>With Your Consent:</strong> When you explicitly authorize
+              us to share your information
+            </li>
+          </ul>
+
+          <h2>4. Cookies and Tracking Technologies</h2>
+          <p>
+            We use cookies and similar technologies to enhance your browsing
+            experience. Cookies help us:
+          </p>
+          <ul>
+            <li>Remember your preferences and shopping cart items</li>
+            <li>Understand how you use our website</li>
+            <li>Provide personalized content and advertisements</li>
+            <li>Analyze website traffic and performance</li>
+          </ul>
+          <p>
+            You can control cookie preferences through your browser settings,
+            but this may affect website functionality.
+          </p>
+
+          <h2>5. Data Security</h2>
+          <p>
+            We implement industry-standard security measures to protect your
+            personal information, including:
+          </p>
+          <ul>
+            <li>Encryption of sensitive data during transmission (SSL/TLS)</li>
+            <li>
+              Secure storage of payment information through PCI-compliant
+              processors
+            </li>
+            <li>Regular security assessments and updates</li>
+            <li>Access controls and authentication procedures</li>
+          </ul>
+          <p>
+            However, no method of transmission over the internet is 100% secure,
+            and we cannot guarantee absolute security.
+          </p>
+
+          <h2>6. Your Rights and Choices</h2>
+          <p>You have certain rights regarding your personal information:</p>
+          <ul>
+            <li>
+              <strong>Access:</strong> Request access to the personal
+              information we hold about you
+            </li>
+            <li>
+              <strong>Correction:</strong> Request correction of inaccurate or
+              incomplete information
+            </li>
+            <li>
+              <strong>Deletion:</strong> Request deletion of your personal
+              information (subject to legal obligations)
+            </li>
+            <li>
+              <strong>Opt-Out:</strong> Unsubscribe from marketing emails at any
+              time
+            </li>
+            <li>
+              <strong>Data Portability:</strong> Request a copy of your data in
+              a portable format
+            </li>
+          </ul>
+          <p>
+            To exercise these rights, please contact us at privacy@bagitup.com.
+          </p>
+
+          <h2>7. Children's Privacy</h2>
+          <p>
+            Our services are not directed to individuals under the age of 13. We
+            do not knowingly collect personal information from children. If we
+            become aware that we have collected information from a child without
+            parental consent, we will take steps to delete that information.
+          </p>
+
+          <h2>8. Third-Party Links</h2>
+          <p>
+            Our website may contain links to third-party websites. We are not
+            responsible for the privacy practices of these external sites. We
+            encourage you to review their privacy policies before providing any
+            personal information.
+          </p>
+
+          <h2>9. International Data Transfers</h2>
+          <p>
+            Your information may be transferred to and processed in countries
+            other than your country of residence. We ensure that appropriate
+            safeguards are in place to protect your information in accordance
+            with this Privacy Policy.
+          </p>
+
+          <h2>10. Changes to This Privacy Policy</h2>
+          <p>
+            We may update this Privacy Policy from time to time. We will notify
+            you of any material changes by posting the new Privacy Policy on
+            this page and updating the "Last Updated" date. We encourage you to
+            review this Privacy Policy periodically.
+          </p>
+
+          <h2>11. Contact Us</h2>
+          <p>
+            If you have any questions, concerns, or requests regarding this
+            Privacy Policy or our data practices, please contact us:
+          </p>
+          <p>
+            <strong>Email:</strong> privacy@bagitup.com<br />
+            <strong>Phone:</strong> +1 (555) 123-4567<br />
+            <strong>Address:</strong> 123 Fashion Avenue, New York, NY 10001<br />
+            <strong>Data Protection Officer:</strong> dpo@bagitup.com
+          </p>
+        </div>
+      </div>
+
+      <a href="home.html" class="back-to-home-btn">← Back to Home</a>
+    </div>
+  </body>
 </html>
